--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -25,7 +25,7 @@ jobs:
           cache-dependency-path: docs/package-lock.json
       
       - name: Install dependencies
-        run: cd docs && npm ci
+        run: cd docs && npm ci --legacy-peer-deps
       
       - name: Build
         run: cd docs && npm run build
