--- a/docs/package.json
+++ b/docs/package.json
@@ -1,27 +1,27 @@
 {
-  "name": "@quarktv/docs",
-  "version": "1.0.0",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build --debug",
-    "start": "next start"
-  },
-  "dependencies": {
-    "@quarktv/docs": "file:",
-    "@quarktv/quark-tv-player": "^1.1.3",
-    "framer-motion": "^11.18.0",
-    "next": "^14.2.23",
-    "nextra": "^4.0.0",
-    "nextra-theme-docs": "^4.0.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.33",
-    "tailwind-scrollbar": "^3.1.0",
-    "tailwindcss": "^3.4.1"
-  }
+    "name": "@quarktv/docs",
+    "version": "1.0.0",
+    "private": true,
+    "type": "module",
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build && next export",
+        "start": "next start"
+    },
+    "dependencies": {
+        "@quarktv/docs": "file:",
+        "@quarktv/quark-tv-player": "^1.1.3",
+        "framer-motion": "^11.18.0",
+        "next": "^14.2.23",
+        "nextra": "^4.0.0",
+        "nextra-theme-docs": "^4.0.0",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1"
+    },
+    "devDependencies": {
+        "autoprefixer": "^10.4.17",
+        "postcss": "^8.4.33",
+        "tailwind-scrollbar": "^3.1.0",
+        "tailwindcss": "^3.4.1"
+    }
 }
