--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@quarktv/quark-tv-player",
   "private": false,
   "version": "1.1.5",
-  "description": "A modern React video player component for live streaming",
+  "description": "A modern React video player component for live streaming.",
   "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
