--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@quarktv/quark-tv-player",
   "private": false,
-  "version": "1.1.6",
+  "version": "1.1.6.1",
   "description": "A modern React video player component for live streaming.",
   "type": "module",
   "main": "dist/index.js",
@@ -39,6 +39,7 @@
     "hls.js": "^1.5.19"
   },
   "devDependencies": {
+    "@swc/core": "^1.10.7",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
