--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ node_modules
 .pnp
 .pnp.js
 
+test
+
 # Examples
 ./example/*
 
@@ -21,6 +23,7 @@ coverage
 .env.development.local
 .env.test.local
 .env.production.local
+.env.*
 
 # Debug
 npm-debug.log*
@@ -34,4 +37,4 @@ yarn-error.log*
 *.ntvs*
 *.njsproj
 *.sln
-*.sw? 
+*.sw?
